<resources>
    <string name="app_name">LV Create</string>
    <string name="lok_desc">Empowerment through Knowledge-Sharing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="existingmember">Existing member?</string>
    <string name="newmember">New Member?</string>
    <string name="signin">Google Sign In</string>
    <string name="signup">Google Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_project">Edit Project</string>
    <string name="title_activity_recording">Recording</string>
    <string name="title_activity_view_video">View Video</string>
    <string name="title_activity_crop_image">Crop</string>
    <string name="delete">Delete</string>
    <string name="myprojects">My Projects</string>
    <string name="addProject">Add project</string>
    <string name="deleteProject">Delete project</string>
    <string name="ffmpeg_cmd_hint">Enter command here. To run \"ffmpeg -version\" enter \"-version\"</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="device_not_supported_message">FFmpeg is not supported on your device</string>
    <string name="run">Run</string>
    <string name="empty_command_toast">You cannot execute empty command</string>
    <string name="title_activity_db">DBActivity</string>
    <string name="takePic">Take a Picture</string>
    <string name="gallery">Choose from Gallery</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="stop">Stop</string>
    <string name="current">Current</string>
    <string name="totallength">Total</string>
    <string name="retry">Retry</string>
    <string name="done">Done</string>
    <string name="record">Record</string>
    <string name="listen">listen</string>
    <string name="shot">Shots</string>
    <string name="preview">Video Preview</string>
    <string name="stitch">Stitch</string>
    <string name="viewvideo">View Video</string>
    <string name="enterName">Enter Project Name</string>
    <string name="importproject">Import Project</string>
    <string name="shareVideo">Share video</string>
    <string name="shareProject">Share project</string>
    <string name="uploadVideo">Upload the video</string>
    <string name="share">Share/Upload</string>
    <string name="shareDialog">Pick a project to share</string>
    <string name="whatShareDialog">Choose an option to share or Upload</string>
    <string name="forward">Next</string>
    <string name="save">Do you want to save the changes made in the image?</string>
    <string name="bad">Stretch</string>
    <string name="fit">Fit</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="deleteItembutton">Delete</string>
    <string name="deleteProjectPickerDialog">Pick a project to delete</string>
    <string name="deleteConfirmation">Are you sure you want to delete the file?</string>
    <string name="projectNameSpace">Project name should not start or end with space</string>
    <string name="projectNameDot">Project name should not contain dot.</string>
    <string name="projectNameEmpty">Project name cannot be empty</string>
    <string name="projectExists">Another project exists with same name.</string>
    <string name="stitchingProcessTitle">Please wait ...</string>
    <string name="stitchingProcessMessage">Stitching video ...</string>
    <string name="selectProjectToImport">Select project file to import</string>
    <string name="OkButton">Ok</string>
    <string name="CancelButton">Cancel</string>
    <string name="NoFileManager">Please install a File Manager to import</string>
    <string name="galleryImageProcessMessage">Loading Images</string>
    <string name="title_activity_tutorial_video">TutorialVideo</string>
    <string name="seed_download">Download sample projects</string>
    <string name="sampleproject1">sample1</string>
    <string name="sampleproject2">sample2</string>
    <string name="sampleproject3">sample3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ChangeImage">Change Image</string>
    <string name="UploadAudio">Upload Audio</string>
    <string name="select_audio_file_title">Select file to upload</string>
    <string name="Biogas">About Biogas(hindi)</string>
    <string name="TreadlePump">Working of a Treadle Pump(odiya)</string>
    <string name="offlineSeed">ST-Swirler-Marathi</string>
    <string name="seedDownloadProgress">Downloading Sample Projects</string>
    <string-array name="menu">
        <item>Duplicate Project</item>
        <item>Delete</item>
        <item>Export Project</item>
    </string-array>
    <string-array name="drawer_list_array">
        <item>My Projects</item>
        <item>Download Sample Projects</item>
        <item>View Videos</item>
        
        <item>Saved Videos</item>
        <item>Feedback</item>
        <item>SignOut</item>

    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="fab_add_button">Add Project</string>
    <string name="fab_import_button">Import Project</string>
    <string name="croppedImageDesc">The cropped image.</string>
    <string-array name="dummy_list">
        <item>asdas</item>
        <item>xyz</item>
    </string-array>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_veiw_videos">Pick a video to watch it</string>
    <string name="author_name_edittext">Enter your name</string>
    <string name="video_title_edittext">Name the video</string>
    <string name="video_description">Description</string>
    <string name="uploadvideotext">Please provide the following information before uploading your Project:</string>
    <string name="cannotupload">Please fill the required fields</string>
    <string name="author_mail_edittext">Enter your Gmail id</string>
    <string name="video_language_edittext">Language</string>
    <string name="video_upload_category_spinner_textview">Category:</string>
    <string name="category_spinner_title">Select Category</string>
    <string name="input_keywords_edittext">Add keywords/tags(Comma separated values)</string>
    <string name="app_slogan">Empowerment through Knowledge-Sharing</string>
    <string name="server_client_id">1019684307342-5of7vukc91l6qn6tsatp5bki8cmvrl3f.apps.googleusercontent.com</string>
    <string name="browse_govt_schemes">Government Schemes and Initiatives</string>
    <string name="browse_rural_innovation">Rural Innovations</string>
    <string name="browse_category_primaryeducation">Primary Education</string>
    <string name="browse_category_skilldevelopment">Skill development</string>
    <string name="browse_category_farming">Farming and Agriculture</string>
    <string name="browse_category_animal">Animal Husbandry</string>
    <string name="browse_category_health">Health and Sanitation</string>
    <string name="browse_swirler_hindi">Swirler Pack- hindi</string>
    <string name="browse_swirler_marathi">Swirler Pack - marathi</string>
    <string name="browse_pump_hindi">Treadle Pump- hindi</string>
    <string name="browse_pump_oriya">Treadle pump- Oriya</string>
    <string name="browse_pump_marathi">Treadle Pump - Marathi</string>
    <string name="browse_biogas_finance">Finance for Biogas (Government Subsidies)</string>
    <string name="long_press_duplicate_proj">Duplicate Project</string>
    <string name="long_press_zip_proj">Export Project</string>
    <string name="import_overwrite">Overwrite existing project with same name?</string>
    <string name="download_video_progress_message">Downloading your video</string>
    <string name="upload_success_toast">Your project upload is in process, you will be able to download and view your video in some time.</string>
    <string name="upload_fail_toast">Your project upload is in process, you will be able to download and view your video in some time.</string>
    <string name="upload_progressdialog_message">Uploading, please wait</string>
    <string name="link_button">Link</string>
    <string name="title_activity_link_videos">LinkVideos</string>
    <string name="title_activity_okbye">okbye</string>
    <string name="link_videos">Link the selected videos</string>
    <string name="contact_number">Enter you Contact No.</string>
    <string name="organization_affiliation">Affiliated to which Organization?</string>
    <string name="button_done">Done</string>
    <string name="remove_link_button">Remove Link</string>
    <string name="title_activity_remove_links">RemoveLinksActivity</string>
    <string name="spinner_title">Select one of the below:</string>
    <string name="feedback_type">Feedback Type:</string>
    <string name="button_submit">SUBMIT</string>
    <string name="helpfeedback_activity_description">Your feedback, system information and email address will be sent to the team. See the app\'s privacy policy and terms of service.</string>
    <string name="menu_delete">Delete Selected Videos</string>
    <string name="download_from_videoplayeractivity">Choose your download</string>
    <string name="progressdialog_download_project_from_videoplayeractivity">Downloading as project</string>
    <string-array name="download_video_or_project">
        <item> Download Video</item>
        <item>Download Project</item>
    </string-array>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="create_project">Create Project</string>
    <string name="fragment_view_videos">My Projects</string>
    <string name="view_videos">Videos</string>
    <string name="user_account">Profile</string>
    <string name="camera">Take\nImage</string>
    <string name="image">Choose\nImage</string>
    <string name="choose_video">Choose\nVideo</string>
    <string name="play_video">Play Video</string>
    <string name="add_audio">Add Audio</string>
    <string name="captured_image_name">Lokavidya</string>
    <string name="question">Write Question</string>
    <string name="storage_error">Storage can not be accessed</string>
    <string name="permission_storage_rationale">We need your permissions to save Projects and Videos on your phone</string>
    <string name="button_allow">Permission granted</string>
    <string name="button_deny">No</string>
    <string name="record_audio">Record</string>
    <string name="stop_record_audio">Stop</string>
    <string name="cannot_record">Cannot record while playing</string>
    <string name="cannot_play">Cannot play while recording</string>
    <string name="save_project">Save Project</string>
    <string-array name="tab_titles">
        <item>LVCreate</item>
        <item>Create Project</item>
        <item>My Projects</item>
    </string-array>
    <string name="title_activity_audio_record">Add Audio</string>
    <string name="projects">Projects</string>
    <string name="my_projects">My Projects</string>
    <string name="saved_projects">Saved Projects</string>
    <string name="saved_videos">Saved Videos</string>
    <string name="crop_image_activity_title">Edit Image</string>
    <string name="txt_welcome_to">Welcome to <font fgcolor="#c82c1f">LV Create</font></string>
    <string name="forgot_password_login_text">Forgot Password?</string>
    <string name="txt_sign_in">"Sign In"</string>
    <string name="txt_dont_have_lv_account">Don\'t have an Account?</string>
    <string name="txt_sign_up">SignUp</string>
    <string name="email_id_phone_number_text">"Mobile Number or Email Id"</string>
    <string name="password_text">"Password"</string>
</resources>