<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_sign_in_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_margin="@dimen/margin_35_dp"
        android:src="@drawable/lokavidya_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txt_welcome_to"
        android:textColor="#e68923"
        android:textSize="@dimen/font_size_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_custom_editext_drawable"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/padding_10_dp"
        android:paddingRight="0dp"
        android:paddingStart="@dimen/padding_10_dp"
        android:textColorHint="@color/edit_text_gray_background"
        android:theme="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_contact"
            android:drawablePadding="@dimen/padding_10_dp"
            android:drawableStart="@drawable/ic_contact"
            android:hint="@string/email_id_phone_number_text"
            android:inputType="text"
            android:paddingBottom="@dimen/padding_10_dp"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/padding_5_dp"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/padding_5_dp"
            android:paddingTop="@dimen/padding_5_dp"
            android:textColor="@color/edit_text_login_color"
            android:textSize="@dimen/font_size_16sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_custom_editext_drawable"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/padding_10_dp"
        android:paddingRight="0dp"
        android:paddingStart="@dimen/padding_10_dp"
        android:textColorHint="@color/edit_text_gray_background"
        android:theme="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_10_dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:maxLength="25"
            android:paddingBottom="@dimen/padding_10_dp"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/padding_5_dp"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/padding_5_dp"
            android:paddingTop="@dimen/padding_5_dp"
            android:textColor="@color/edit_text_login_color"
            android:textSize="@dimen/font_size_16sp" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:letterSpacing="0.01"
        android:onClick="forgotPassword"
        android:paddingTop="@dimen/padding_10_dp"
        android:text="@string/forgot_password_login_text"
        android:textColor="#99666666"
        android:textSize="@dimen/font_size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />


    <TextView
        android:id="@+id/si_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/brick_btn_bg"
        android:paddingBottom="@dimen/padding_12_dp"
        android:paddingEnd="@dimen/padding_45_dp"
        android:paddingLeft="@dimen/padding_45_dp"
        android:paddingRight="@dimen/padding_45_dp"
        android:paddingStart="@dimen/padding_45_dp"
        android:paddingTop="@dimen/padding_12_dp"
        android:text="@string/txt_sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />


    <TextView
        android:id="@+id/tv_add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="@dimen/padding_5_dp"
        android:text="@string/txt_dont_have_lv_account"
        android:textColor="#666666"
        android:textSize="@dimen/font_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="@dimen/padding_5_dp"
        android:text="@string/txt_sign_up"
        android:textColor="#e68923"
        android:textSize="@dimen/font_size_16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_add_account"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_add_account" />


</android.support.constraint.ConstraintLayout>

